# InterMind

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: PRD.md  TECHNICAL_DESIGN.md
src/latentcore/: __init__.py  __main__.py  app.py  config.py
src/latentcore/engine/: device.py  infini_attention.py  text_decoder.py  text_encoder.py  vq_codebook.py
src/latentcore/middleware/: error_handler.py  token_counter.py
src/latentcore/models/: health.py  latent.py  openai_compat.py
src/latentcore/routes/: codebook_stats.py  health.py  latent.py  proxy.py
src/latentcore/services/: compression_service.py  context_analyzer.py  proxy_service.py
src/latentcore/storage/: database.py  latent_store.py  schema.sql
src/latentcore/utils/: serialization.py  sse.py  token_utils.py
tests/: conftest.py  test_config.py
tests/test_engine/: test_infini_attention.py  test_text_encoder.py  test_vq_codebook.py
tests/test_routes/: test_health.py
tests/test_services/: test_context_analyzer.py
tests/test_storage/: test_latent_store.py
